--- a/css/mycss.css
+++ b/css/mycss.css
@@ -306,3 +306,52 @@ form:after {
 	background-position: 0 -135px;
 	color: #00aeef;
 }
+
+
+/* Stil za dropdwon listu */
+/* Style The Dropdown Button #DCDDDF*/
+        .dropbtn1 {
+            background-color: transparent;
+            color: #A4A4A4;
+            padding: 2px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
+
+        /* The container <div> - needed to position the dropdown content */
+        .dropdown1 {
+            position: relative;
+            display: inline-block;
+        }
+
+        /* Dropdown Content (Hidden by Default) */
+        .dropdown-content1 {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        /* Links inside the dropdown */
+        .dropdown-content1 a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        /* Change color of dropdown links on hover */
+        .dropdown-content1 a:hover {background-color: #f1f1f1}
+
+        /* Show the dropdown menu on hover */
+        .dropdown1:hover .dropdown-content1 {
+            display: block;
+        }
+
+        /* Change the background color of the dropdown button when the dropdown content is shown */
+        .dropdown1:hover .dropbtn1 {
+            background-color: transparent;
+        }
