--- a/css/profile-hover.css
+++ b/css/profile-hover.css
@@ -89,6 +89,7 @@ span.box:hover > .overlay {
   max-width: 90px;
   opacity: 1;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  background-color: #dee2e6;
 }
 .snip1336 .follow {
   border-color: #28b978;
