--- a/css/mycss.css
+++ b/css/mycss.css
@@ -141,6 +141,7 @@ form:after {
 	z-index: -2;
 }
 #content2 form { margin: 0 20px; position: relative }
+
 #content2 form input[type="text"],
 #content2 form input[type="password"] {
 	-webkit-border-radius: 3px;
@@ -177,24 +178,31 @@ form:after {
 	border: 1px solid #ed1c24;
 	outline: none;
 }
-#email { background-position: 10px 10px !important }
-#gname { background-position: 10px 10px !important }
-#name { background-position: 10px 10px !important }
-#lname { background-position: 10px 10px !important }
-#q1 { background-position: 10px 10px !important }
-#q2 { background-position: 10px 10px !important }
-#pass { background-position: 10px -53px !important }
-#npass { background-position: 10px -53px !important }
-#rnpass { background-position: 10px -53px !important }
+#content2 form .d_in[type="text"]{
+	float: left;
+	width: 150px;
+	margin-right: 5px;
+	padding: 6px;
+	background: none;
+}
+#email { background: #eae7e7 url(../img/mail.png) no-repeat 15px 13px !important}
+#gname { background: #eae7e7 url(../img/user.png) no-repeat 15px 13px !important }
+#name { background: #eae7e7 url(../img/user.png) no-repeat 15px 13px !important }
+#lname { background: #eae7e7 url(../img/user.png) no-repeat 15px 13px !important }
+#q1 { background: #eae7e7 url(../img/q.png) no-repeat 15px 13px !important }
+#q2 { background: #eae7e7 url(../img/q.png) no-repeat 15px 13px !important }
+#pass { background: #eae7e7 url(../img/pass.png) no-repeat 15px 13px !important }
+#npass { background: #eae7e7 url(../img/pass.png) no-repeat 15px 13px !important }
+#rnpass { background: #eae7e7 url(../img/pass.png) no-repeat 15px 13px !important }
 
 
 #content2 form input[type="submit"] {
 	background: rgb(254,231,154);
-	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(254,193,81,1) 100%);
-	background: -webkit-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
-	background: -o-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
-	background: -ms-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
-	background: linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
+	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(255, 108, 64, 1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: -o-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: -ms-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fee79a', endColorstr='#fec151',GradientType=0 );
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
@@ -219,21 +227,21 @@ form:after {
 }
 #content2 form input[type="submit"]:hover {
 	background: rgb(254,193,81);
-	background: -moz-linear-gradient(top,  rgba(254,193,81,1) 0%, rgba(254,231,154,1) 100%);
-	background: -webkit-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
-	background: -o-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
-	background: -ms-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
-	background: linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+	background: -moz-linear-gradient(top,  rgba(255, 108, 64, 1) 0%, rgba(254,231,154,1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: -o-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fec151', endColorstr='#fee79a',GradientType=0 );
 }
 
 #content2 form input[type="button"] {
 	background: rgb(254,231,154);
-	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(254,193,81,1) 100%);
-	background: -webkit-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
-	background: -o-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
-	background: -ms-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
-	background: linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
+	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(255, 108, 64, 1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: -o-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: -ms-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fee79a', endColorstr='#fec151',GradientType=0 );
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
@@ -258,11 +266,11 @@ form:after {
 }
 #content2 form input[type="button"]:hover {
 	background: rgb(254,193,81);
-	background: -moz-linear-gradient(top,  rgba(254,193,81,1) 0%, rgba(254,231,154,1) 100%);
-	background: -webkit-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
-	background: -o-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
-	background: -ms-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
-	background: linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+	background: -moz-linear-gradient(top,  rgba(255, 108, 64, 1) 0%, rgba(254,231,154,1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: -o-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fec151', endColorstr='#fee79a',GradientType=0 );
 }
 #content2 form div a {
