--- a/css/mycss.css
+++ b/css/mycss.css
@@ -195,7 +195,44 @@ form:after {
 #npass { background: #eae7e7 url(../img/pass.png) no-repeat 15px 13px !important }
 #rnpass { background: #eae7e7 url(../img/pass.png) no-repeat 15px 13px !important }
 
-
+#but {
+	background: rgb(254,231,154);
+	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(255, 108, 64, 1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: -o-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: -ms-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	background: linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(255, 108, 64, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fee79a', endColorstr='#fec151',GradientType=0 );
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	-o-border-radius: 30px;
+	border-radius: 30px;
+	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	-ms-box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	-o-box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	border: 1px solid #D69E31;
+	color: #85592e;
+	cursor: pointer;
+	float: left;
+	font: bold 15px Helvetica, Arial, sans-serif;
+	height: 35px;
+	margin: 20px 0 35px 15px;
+	position: relative;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+	width: 150px;
+}
+#but:hover {
+	background: rgb(254,193,81);
+	background: -moz-linear-gradient(top,  rgba(255, 108, 64, 1) 0%, rgba(254,231,154,1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: -o-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	background: linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fec151', endColorstr='#fee79a',GradientType=0 );
+}
 #content2 form input[type="submit"] {
 	background: rgb(254,231,154);
 	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(255, 108, 64, 1) 100%);
@@ -273,6 +310,7 @@ form:after {
 	background: linear-gradient(top,  rgba(255, 108, 64, 1) 0%,rgba(254,231,154,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fec151', endColorstr='#fee79a',GradientType=0 );
 }
+
 #content2 form div a {
 	color: #004a80;
     float: right;
