--- a/css/mycss.css
+++ b/css/mycss.css
@@ -506,7 +506,7 @@ form:after {
         transition: color .1s linear;
     }
     .icon-wrap a:hover {
-        color: #7d7d7d;
+        color: #6f8686;
     }
 
 	/* dodao sam ovo da probam */
