--- a/css/mycss.css
+++ b/css/mycss.css
@@ -464,6 +464,7 @@ form:after {
         border-radius: 5px;
         border-top: 33.33333px solid #ff6c40;
         font-family: 'Raleway', sans-serif;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     .profile_pic-wrap {
